# chatpeer

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
daemon/: Cargo.toml  chatpeer.service
daemon/src/: config.rs  crypto.rs  db.rs  dbus_api.rs  main.rs  protocol.rs  state.rs
extension/: chatDialog.js  dbusClient.js  extension.js  metadata.json  panelMenu.js  stylesheet.css
