[package]
name = "chatpeer-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "E2EE encrypted P2P chat daemon for the GNOME top bar"

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "mdns",
    "kad",
    "gossipsub",
    "request-response",
    "relay",
    "identify",
    "ping",
    "noise",
    "yamux",
    "macros",
] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
zbus = { version = "4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
crypto_box = { version = "0.9", features = ["seal"] }
ed25519-dalek = "2"
x25519-dalek = "2"
rand = "0.8"
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
tokio-util = "0.7"
hex = "0.4"
toml = "0.8"
futures = "0.3"
